# qoala-mlir

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .llvm_sha  CMakeLists.txt  LICENSE  README.md  docs.md  hir.mlir  lircommon2.mlir  lircommon3.mlir  mkdocs.yml  pyproject.toml  setup.cfg  tiny.mlir
.github/workflows/: build.yml  docker.yml  docs.yml  release.yml
build_backup/: .ninja_deps  CMakeCache.txt  build.ninja
cmake/: DynamicVersion.cmake  _version.py.in
codegen/: lir.py  lir_to_qoala.py
docker/llvm-scip/: Dockerfile
docs/: README.md  bindings.md  contributing.md  figures-todo.md  functionize.md  getting-started.md  index.md  mlir-cmake.md  overview.md
docs/architecture/: index.md  irs.md  pipeline.md
docs/developer-guide/: build-from-source.md  working-with-mlir.md
docs/internals/: functionize.md  original-notes.md
docs/passes/: hir-to-mir.md  hir.md  index.md  lir.md  mir-to-lir.md  mir.md
docs/reference/: index.md  netqasm.md  qmem.md  qnet.md  qoalahost.md  qremote.md
docs/tools/: index.md  interpreter.md  qoala-opt.md  qoala-translate.md
graphs/: bqc_server_hir.gv  graph.gv  lir.gv
hir/: CMakeLists.txt  hirc.cpp
hir-opt/: CMakeLists.txt  hir-opt.cpp
hir/examples/: tiny.mlir
hir/include/: CMakeLists.txt
hir/include/hir/: CMakeLists.txt  HirDialect.h  Ops.td
hir/mlir/: HirDialect.cpp
include/: CMakeLists.txt  version.h.in
include/Dialect/: CMakeLists.txt
include/Dialect/iqoala/: CMakeLists.txt  iQoala.h  iQoala.td  iQoalaDialect.h  iQoalaDialect.td  iQoalaOps.td
include/Dialect/iqoala/Transforms/: CMakeLists.txt  iQoalaTransforms.td
include/Dialect/lircommon/: CMakeLists.txt  LirCommonDialect.h  LirCommonDialect.td  LirCommonOps.h  LirCommonOps.td  LirCommonTypes.h  LirCommonTypes.td  Passes.h  Passes.td
include/Dialect/lircommon/Transforms/: CMakeLists.txt  LirCommonRewrites.td
include/QNet-C/: QNet-c.h
include/Qnet-C/: Qnet-c.h
include/Tools/: QoalaOpt.h
include/Translation/: QoalaTransformationInterface.h  QoalaTranslationInterface.h
include/lowering/: CMakeLists.txt  HIRToLIR.h  HIRToLIR.td  HIRToLIRPatterns.h
include/qoalahir/: QoalaHirDialect.h  QoalaHirOps.h  QoalaHirTypes.h
include/qoalahir-c/: qoalahir.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/QoalaMIRToQoalaLIR/: CMakeLists.txt  QMemToLower.cpp  QMemToLowerDialects.cpp  QMemToNetQASM.cpp  QMemToQRemote.cpp  QMemToQoalaHost.cpp  QoalaMIRToQoalaLIR.cpp  QoalaMIRToQoalaLIRPatterns.cpp
lib/Conversion/QoalaMIRToQoalaLIR/Helpers/: CMakeLists.txt  FoldConstants.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/hir/: CMakeLists.txt  Hir.cpp  HirDialect.cpp  HirOps.cpp  HirPasses.cpp  HirTypes.cpp
lib/Dialect/hir/Analysis/: CMakeLists.txt  CheckLinear.cpp
lib/Dialect/hir/Transforms/: HirRewrites.cpp
lib/Dialect/lircommon/Transforms/: CMakeLists.txt  LirCommonRewrites.cpp
lib/Python/: CMakeLists.txt  QNetExtension.cpp  QnetExtension.cpp
lib/QNet-CAPI/: CMakeLists.txt  QNetCAPI.cpp
lib/Qnet-CAPI/: CMakeLists.txt  QnetCAPI.cpp
lib/lowering/: CMakeLists.txt  HIRToLIRPatterns.cpp  Helpers.cpp  HirToLir.cpp
lib/python/: CMakeLists.txt  HirOps.td  QoalaHirExtension.cpp
lib/qoalahir/: CMakeLists.txt  QoalaHirDialect.cpp  QoalaHirOps.cpp  QoalaHirPasses.cpp
lib/qoalahir-capi/: CMakeLists.txt  QoalaCAPI.cpp
lib/toy/: CMakeLists.txt
mlir_files/: arithmetic.mlir  big.mlir  bqc_client.mlir  bqc_server.mlir  hir.mlir  lir_reorder.mlir  lircommon.mlir  lircommon2.mlir  lircommon3.mlir  teleport_send.mlir  tiny.mlir  up_and_down.mlir
old/build_backup/: .ninja_log  cmake_install.cmake  rules.ninja
old/hir-opt/: CMakeLists.txt  hir-opt.cpp
old/include/Dialect/hir/: CMakeLists.txt  HirDialect.h  HirDialect.td  HirTypes.h  HirTypes.td
old/include/Dialect/hir/Transforms/: CMakeLists.txt
old/include/Dialect/lir/: CMakeLists.txt  LirDialect.td  LirOps.h  LirOps.td  LirTypes.h  Passes.td
old/include/Dialect/lir/Transforms/: LirRewrites.td
old/old_programs/: bqc_5_5_server.mlir  bqc_client.mlir  bqc_server.mlir  teleport_recv.mlir
old/tools/: CMakeLists.txt
programs/: bqc_5_5_server.hir  bqc_5_5_server.lir  bqc_server.mlir  compile.sh  lna_alice.mlir  lna_bob.mlir  teleport_send.mlir
programs/Host/: Host1.mlir
programs/OLD/: bqc_server.mlir  netqasm1.mlir  reference.mlir  reference_bare.mlir
programs/hir/: hir_quantum.mlir
programs/iqoala/: iqoala1.mlir
programs/lir/: bqc_server.mlir  bqc_server_bare.mlir  bqc_server_simple.mlir
programs/llvm/: llvm1.mlir  llvm2.mlir  llvm3.mlir
programs/netqasm/: bqc_server_bare.mlir  bqc_server_with_fail.mlir  bqc_server_with_fail_bare.mlir  netqasm1.mlir
programs/output/: bqc_client_hir.mlir  bqc_client_lir_MD.mlir  bqc_client_lir_MU.mlir  bqc_server_lir_MUGR.mlir  lna_alice_hir.mlir  lna_alice_lir_GR.mlir  lna_alice_lir_MU.mlir  (+9 more)
qnir/: CMakeLists.txt  qnirc.cpp
qnir/include/: CMakeLists.txt
qnir/include/qnir/: AST.h  CMakeLists.txt  Dialect.h  Ops.td  Parser.h
qnir/mlir/: Dialect.cpp  MLIRGen.cpp  QnirCombine.cpp  QnirCombine.td
qnir/parser/: AST.cpp
qoala_mlir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check-clang-format.sh
spec/: lir.md
tablegen_reference/: HirOps.cpp.inc  HirOps.cpp.inc.d  HirOps.h.inc  HirOps.h.inc.d  HirOpsDialect.cpp.inc  HirOpsDialect.cpp.inc.d  HirOpsDialect.h.inc.d  HirOpsTypes.cpp.inc  HirOpsTypes.cpp.inc.d  HirOpsTypes.h.inc  HirOpsTypes.h.inc.d
test/: .lit_test_times.txt  CMakeLists.txt  lir.mlir  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/Host/: CMakeLists.txt  host-opt.cpp
tools/Qnet-opt/: CMakeLists.txt  Qnet_opt.cpp
tools/hir-translate/: CMakeLists.txt  hir-translate.cpp
tools/interpreter/: CMakeLists.txt  interpreter.cpp
tools/lir/: CMakeLists.txt  lir_opt.cpp
tools/qoala-opt/: CMakeLists.txt  qoala-opt.cpp  qoala_opt.cpp
tools/qoala-translate/: CMakeLists.txt  qoala-translate.cpp
tools/qoala_lir_m/: CMakeLists.txt  qoala_lir_m_opt.cpp
toy/: CMakeLists.txt
toy/toy-user/: CMakeLists.txt  toy-user.cpp
(+856 files in other folders)
