[project]
name = "qoala-mlir"
readme = "README.md"
version = "0.0.1"
# Python 3.13 is not supported, since numpy (dependency from MLIR, required <=1.26)
# supports python <3.13. Numpy 2.2+ is the first version that supports python 3.13,
# which might break the build (untested though).
requires-python = ">=3.10, <3.13"
license = { "file" = "LICENSE" }
authors = [
    { "name" = "Bart van der Vecht", "email" = "b.vandervecht@tudelft.nl" },
    { "name" = "Diego Rivera", "email" = "d.a.g.a.rivera@tudelft.nl"}
]
maintainers = [
    {name = "Bart van der Vecht", email ="b.vanderVecht@tudelft.nl"},
    {name = "Diego Rivera", email ="d.a.g.a.rivera@tudelft.nl"}
]
description = ""
keywords = ["compiler", "quantum", "bindings"]
# List of transitive dependencies from llvm/mlir/python/requirements.txt which are
# the base packages required for executing any MLIR python bindings.
# This list needs to be updated if needed
dependencies = [
    "numpy>=1.19.5, <=1.26",
    "pybind11>=2.9.0, <=2.10.3",
    "PyYAML>=5.3.1, <=6.0.1",
    "dataclasses>=0.6, <=0.8"
]

[build-system]
requires = ["py-build-cmake~=0.4.3"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "package"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "include/*", "lib/*"]

[tool.py-build-cmake.cmake]
# This is the minimum cmake version reuqired to build this wheel
# This value *must match* the cmake_minimum_required version specified in the root CMakeLists.txt
minimum_version = "3.13.4"
build_type = "Release"
build_path = "py-build/"
source_path = "."
# The arguments for the cmake command
# In general we need to use ths same list fo arguments we use to configure the build of the C++ project
# IMPORTANT: Before building update the MLIR_DIR, Python3_EXECUTABLE, CMAKE_C_COMPILER, CMAKE_CXX_COMPILER
# and CMAKE_LINKER commands to match your platform.
# SUPER IMPORTANT! Make sure that the Python3_EXECUTABLE *matches* the python version of the
# virtual environment used to create the wheel, otherwise you might end up in a situaiton tha the package
# is marked for 1 verison of python (e.g. 3.12), but the packed python bindings are compiled for
# another version of python (e.g. 3.11). This leads to python to *not* find the python bindings
# resulting in import errors.
# A good way to make sure that the versions match is to use the *exact same* virtual environment as
# declared in Python3_EXECUTABLE to create the wheel.
args = [
    "-DMLIR_DIR=/opt/mlir/lib/cmake/mlir",
    "-DPython3_EXECUTABLE=/home/diego/.virtualenvs/llvm-venv/bin/python",
    "-DCMAKE_C_COMPILER=clang-20",
    "-DCMAKE_CXX_COMPILER=clang++-20",
    "-DCMAKE_LINKER=clang-20"
]
build_args = ["-j"]
generator = "Ninja"
install_components = ["QNetPythonModules", "qoala-translate-wheel", "qoala-opt-wheel"]
find_python = false
find_python3 = false

[tool.py-build-cmake.wheel]
python_abi = "none"
