[project]
name = "qoala-mlir"
readme = "README.md"
dynamic = ["version"]
# Python 3.13 is not supported, since numpy (dependency from MLIR, required <=1.26)
# supports python <3.13. Numpy 2.2+ is the first version that supports python 3.13,
# which might break the build (untested though).
requires-python = ">=3.10, <3.13"
license = { "file" = "LICENSE" }
authors = [
    { "name" = "Bart van der Vecht", "email" = "b.vandervecht@tudelft.nl" },
    { "name" = "Diego Rivera", "email" = "d.a.g.a.rivera@tudelft.nl"},
    { "name" = "Sacha Bernheim", "email" = "s.b.bernheim@tudelft.nl"}
]
maintainers = [
    {name = "Bart van der Vecht", email ="b.vanderVecht@tudelft.nl"},
    {name = "Diego Rivera", email ="d.a.g.a.rivera@tudelft.nl"},
    {name = "Sacha Bernheim", email ="s.b.bernheim@tudelft.nl"}
]
description = ""
keywords = ["compiler", "quantum", "bindings"]
# List of transitive dependencies from llvm/mlir/python/requirements.txt which are
# the base packages required for executing any MLIR python bindings.
# This list needs to be updated if needed
dependencies = [
    "numpy>=1.19.5, <=1.26",
    "pybind11>=2.9.0, <=2.10.3",
    "PyYAML>=5.3.1, <=6.0.1",
    "dataclasses>=0.6, <=0.8"
]

[build-system]
requires = [
    "scikit-build-core>=0.12.2",
    "setuptools-scm>=8",
]
# BUILD WITH ENV VARIABLE: SETUPTOOLS_SCM_OVERRIDES_FOR_QOALA_MLIR='{local_scheme = "no-local-version"}'
# This avoids using git hashed in th eversion number!
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "py-build/"
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.build-type = "Release"
cmake.version = ">=3.28"
cmake.args = [
    "-DSCIP_DIR=/usr/lib/cmake/scip",
    "-DMLIR_DIR=/opt/mlir/lib/cmake/mlir",
    "-DPython3_EXECUTABLE=/home/diego/.virtualenvs/llvm-venv-12/bin/python",
    "-DCMAKE_C_COMPILER=clang-21",
    "-DCMAKE_CXX_COMPILER=clang++-21",
    "-DCMAKE_LINKER=clang-21"
]

sdist.include = ["lib/Python/mlir_qnet/_version.py"]

[tool.setuptools_scm]  # Section required
write_to = "lib/Python/mlir_qnet/_version.py"
