[metadata]
name = qoala-mlir
author = QuTech
author_email = b.vandervecht@tudelft.nl
description = MLIR Compiler for Qoala programs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.8

[options]
packages = codegen
include_package_data = True
install_requires = 
    qoala ==0.3.0
    netqasm ==0.13.0a6
